--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -13,4 +13,11 @@ body
    padding: 0 
   
   
-  
+.mapboxgl-popup-tip
+   display: none
+.mapboxgl-popup
+   transform: none  !important
+
+.mapboxgl-popup-content
+   height: 100vh
+   width: 20vw
