--- a/src/style/index.css
+++ b/src/style/index.css
@@ -15,3 +15,16 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.mapboxgl-popup-tip {
+  display: none;
+}
+
+.mapboxgl-popup {
+  transform: none !important;
+}
+
+.mapboxgl-popup-content {
+  height: 100vh;
+  width: 20vw;
+}
